--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.21.3",
     "sass": "^1.70.0"
   },
   "devDependencies": {
