--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.3",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
